[package]
name = "RedLight"
version = "0.1.0"
edition = "2021"

[dependencies]
native-windows-gui = "1.0.13"
winreg = "0.52"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_Magnification",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
]

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
